# recipe_recommender

./: .gitignore  README.md  clean_vv_names.py  data.md  df_matches_faiss_new.csv  eval_matching.ipynb  ingredients.csv  items_dict_pov2vv.json  items_dict_vv2pov.json  lora-train-sirius.ipynb  lora_sirius.py  make_dicts_id.ipynb  matching_process.ipynb  merge_test.py  models_base.ipynb  names_unique_vv.csv  pov_to_vv.csv  pyproject.toml  requirements.txt  setup.cfg  vllm_server.py  vllm_server_sync.py  vlm_connect.py  vv_shorter.ipynb  vv_to_pov.csv
analytics/: README.md  analysis.ipynb  offline_eval.py
analytics/table_reports/: key_event_profile.html  key_order_item_profile.html  key_orders_profile.html  key_product_profile.html  key_user_profile.html
app/: app.py  config_app.py  ui_components.py
config/: app.toml  db.toml  recsys.yml
data/: images_itog.csv
db/: __init__.py  db.py  schema.sql
db/datasets/: base_table_categories_v2.csv
llm_validation/: run_llm_validation.py
models/ease_popular/: cooker2vkussvil.json  items_dict.json  items_dict_pov2vv_str.json  items_dict_vv2pov_str.json
recsys/: __init__.py  ab_testing.py  base.py  features.py  legacy_recsys.py  pipelines.py  registry.py
recsys_case.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
recsys_tests/: eda_cooker.ipynb
scripts/: cron_jobs.sh  export_dataset.py  train_als.py  train_ease.py  train_ranker.py  train_sasrec.py
src/: items_to_mtrx.ipynb  random_splitter.ipynb
tests/: test_recsys.py
validation pipeline/: explain.md
validation_pipeline/: models.py  stats.py  validate.py
(+38 files in other folders)
