[project]
name = "vkusvill_case"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GlebIsrailevich", email = "glebusai308@gmail.com"},
]
dependencies = ["ipykernel>=7.1.0", "polars>=1.35.2", "numpy>=2.3.4", "scipy>=1.16.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
